# aoc2023

./: .gitignore  CMakeLists.txt  create_day_folder.sh  helper.cmake
.github/workflows/: cppcheck.yml
day_1/: CMakeLists.txt  main.cpp
day_10/: CMakeLists.txt  main.cpp
day_11/: CMakeLists.txt  main.cpp
day_12/: CMakeLists.txt  main.cpp
day_13/: CMakeLists.txt  main.cpp
day_2/: CMakeLists.txt  main.cpp
day_3/: CMakeLists.txt  main.cpp
day_4/: CMakeLists.txt  main.cpp
day_5/: Almanac.cpp  Almanac.h  CMakeLists.txt  input_example.txt  main.cpp
day_6/: CMakeLists.txt  main.cpp
day_7/: CMakeLists.txt  input_example.txt  main.cpp
day_8/: CMakeLists.txt  input_example2.txt  main.cpp
day_9/: CMakeLists.txt  main.cpp
day_template/: CMakeLists.txt  main.cpp
include/: helpers.cpp  helpers.h
